# BookReadingAnalyzer

./: .env.example  .gitignore  README.md  pyproject.toml  refactoring_plan.md  requirements-ui.txt  requirements.txt  selenium_stats.py  streamlit_app.py
.github/workflows/: python-app.yml
.streamlit/: config.toml
author_today/: __init__.py  cli.py  cli_common.py  cli_reminders.py  errors.py
author_today/analyze/: __init__.py  chapter_filters.py  formatting.py  funnel.py  funnel_compare.py  hypothesis_tests.py  reads.py  sales.py  stats_test.py
author_today/auth/: __init__.py  base.py  login_flow.py  manual.py  selenium_login.py
author_today/browser/: __init__.py  factory.py
author_today/domain/: __init__.py  models.py
author_today/fetch/: __init__.py  periods.py  stats_page.py  stats_url.py
author_today/parse/: __init__.py  kendo_grid.py
author_today/ui/: app.py  (+3 more)
autor_today.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: __init__.py  books.yaml  settings.py
docs/: README.md  architecture_baseline.md  data_contracts.md  decisions.md  glossary.md  known_issues.md  pre_refactor_checklist.md  testing_strategy.md  ui_streamlit.md
legacy/: 1.py  README.md  analiz.py  analiz1.py  lib.py  parse.py
scripts/: check_load_gaps.py  delete_runs.py  fetch_reads.py  init_mssql.py  report.py  report_funnel.py  report_funnel_compare.py
smoke_tests/: report_funnel__172953__2025-07-01__2025-07-31.csv  report_funnel_compare__172953__2025-07-01__2025-07-31__vs__2025-08-01__2025-08-31.csv  tests.txt
tests/: conftest.py  test_cli_smoke.py
(+41 files in other folders)
