[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "author-today"
version = "0.1.0"
description = "Загрузка и анализ статистики прочтений author.today"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas==2.3.3",
    "requests>=2.32.0,<3",
    "beautifulsoup4>=4.12.0,<5",
    "selenium==4.37.0",
    "pyodbc>=5.0.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]
ui = [
    "streamlit>=1.40.0,<2",
]

[tool.setuptools.packages.find]
include = ["author_today*", "config*"]
exclude = ["tests*", "legacy*", "scripts*"]

[tool.setuptools.package-data]
author_today = ["storage/mssql/*.sql"]
config = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
